test beta fibonacci