@@ -4,6 +4,12 @@ public class Cella {
 
 	private Float value = 0f;
 	private Formula formula;
+	private String text;
+	private Foglio foglio;
+	
+	public Cella(Foglio foglio) {
+		this.foglio = foglio;
+	}
 
 	public Float getValue() {
 		if (formula == null)
@@ -17,22 +23,27 @@ public class Cella {
 	// ogni cella 4 caratteri (segno)(decine)(unità)(decimi)
 	@Override
 	public String toString() {
-		String str = "";
+		if (text != null)
+			return text;
+		
 		Float v = getValue();
-		if (v >= 0) // se è positivo metto uno spazio al posto del -
-			str += " ";
-		if (v < 10 && v > -10) // se la parte intera ha una cifra mette uno spazio
-			str += " ";
-		if (value == 0f) // se è vuota metto 3 spazi al posto di Y,X e ritorno
-			return str + "   ";
-		if (v % 1 == 0) // se è intero metto due spazi al posto di ,X e il valore
-			str += v.intValue() + "  ";
-		else // altrimen
-			str += String.format("%.1f", v);
+
+		String str = "";
+		if (v >= 0) str += " ";
+		if (v < 10 && v >= -10) str += " ";
+		str += "%.1f".formatted(v);
+
 		return str;
 	}
 
 	public void scrivi(Float value) {
 		this.value = value;
+	}
+
+	public void scrivi(String txt) {
+		if (txt.charAt(0) == '=')
+			this.formula = new Formula(txt, foglio);
+		else 
+			this.text = txt;
 	}
 }
